--- a/index.html
+++ b/index.html
@@ -28,105 +28,103 @@
   <body>
     <main>
       <article>
-        <header>
-          <img src="./assets//images/image-omelette.jpeg" alt="Omelette" />
-          <h1>Simple Omelette Recipe</h1>
-          <p>
-            An easy and quick dish, perfect for any meal. This classic omelette
-            combines beaten eggs cooked to perfection, optionally filled with
-            your choice of cheese, vegetables, or meats.
-          </p>
-        </header>
-        <section class="preparation">
-          <h2>Preparation time</h2>
-          <ul>
-            <li>Total: Approximately 10 minutes</li>
-            <li>Preparation: 5 minutes</li>
-            <li>Cooking: 5 minutes</li>
-          </ul>
-        </section>
-        <section class="ingredients">
-          <h2>Ingredients</h2>
-          <ul>
-            <li>2-3 large eggs</li>
-            <li>Salt, to taste</li>
-            <li>Pepper, to taste</li>
-            <li>1 tablespoon of butter or oil</li>
-            <li>
-              Optional fillings: cheese, diced vegetables, cooked meats, herbs
-            </li>
-          </ul>
-        </section>
-        <secion class="instructions">
-          <h2>Instructions</h2>
-          <ol>
-            <li>
-              <p>
-                <strong>Beat the eggs:</strong> In a bowl, beat the eggs with a
-                pinch of salt and pepper until they are well mixed. You can add
-                a tablespoon of water or milk for a fluffier texture.
-              </p>
-            </li>
-            <li>
-              <p>
-                <strong>Heat the pan:</strong> Place a non-stick frying pan over
-                medium heat and add butter or oil.
-              </p>
-            </li>
-            <li>
-              <p>
-                <strong>Cook the omelette:</strong> Once the butter is melted
-                and bubbling, pour in the eggs. Tilt the pan to ensure the eggs
-                evenly coat the surface.
-              </p>
-            </li>
-            <li>
-              <p>
-                <strong>Add fillings (optional):</strong> When the eggs begin to
-                set at the edges but are still slightly runny in the middle,
-                sprinkle your chosen fillings over one half of the omelette.
-              </p>
-            </li>
-            <li>
-              <p>
-                <strong>Fold and serve:</strong> As the omelette continues to
-                cook, carefully lift one edge and fold it over the fillings. Let
-                it cook for another minute, then slide it onto a plate.
-              </p>
-            </li>
-            <li>
-              <p>
-                <strong>Enjoy:</strong> Serve hot, with additional salt and
-                pepper if needed.
-              </p>
-            </li>
-          </ol>
-        </secion>
-        <section class="nutrition">
-          <h2>Nutrition</h2>
-          <p>
-            The table below shows nutritional values per serving without the
-            additional fillings.
-          </p>
-          <table>
-            <thead>
+        <img src="./assets//images/image-omelette.jpeg" alt="Omelette" />
+        <div class="content">
+          <header>
+            <h1>Simple Omelette Recipe</h1>
+            <p>
+              An easy and quick dish, perfect for any meal. This classic
+              omelette combines beaten eggs cooked to perfection, optionally
+              filled with your choice of cheese, vegetables, or meats.
+            </p>
+          </header>
+          <section class="preparation">
+            <h2>Preparation time</h2>
+            <ul>
+              <li><span class="bold">Total</span>: Approximately 10 minutes</li>
+              <li><span class="bold">Preparation</span>: 5 minutes</li>
+              <li><span class="bold">Cooking</span>: 5 minutes</li>
+            </ul>
+          </section>
+          <section class="ingredients">
+            <h2>Ingredients</h2>
+            <ul>
+              <li>2-3 large eggs</li>
+              <li>Salt, to taste</li>
+              <li>Pepper, to taste</li>
+              <li>1 tablespoon of butter or oil</li>
+              <li>
+                Optional fillings: cheese, diced vegetables, cooked meats, herbs
+              </li>
+            </ul>
+          </section>
+          <hr />
+          <secion class="instructions">
+            <h2>Instructions</h2>
+
+            <p>
+              1. <span class="bold">Beat the eggs:</span> In a bowl, beat the
+              eggs with a pinch of salt and pepper until they are well mixed.
+              You can add a tablespoon of water or milk for a fluffier texture.
+            </p>
+
+            <p>
+              2. <span class="bold">Heat the pan:</span> Place a non-stick
+              frying pan over medium heat and add butter or oil.
+            </p>
+
+            <p>
+              3. <span class="bold">Cook the omelette:</span> Once the butter is
+              melted and bubbling, pour in the eggs. Tilt the pan to ensure the
+              eggs evenly coat the surface.
+            </p>
+
+            <p>
+              4. <span class="bold">Add fillings (optional):</span> When the
+              eggs begin to set at the edges but are still slightly runny in the
+              middle, sprinkle your chosen fillings over one half of the
+              omelette.
+            </p>
+
+            <p>
+              5. <span class="bold">Fold and serve:</span> As the omelette
+              continues to cook, carefully lift one edge and fold it over the
+              fillings. Let it cook for another minute, then slide it onto a
+              plate.
+            </p>
+
+            <p>
+              6. <span class="bold">Enjoy:</span> Serve hot, with additional
+              salt and pepper if needed.
+            </p>
+          </secion>
+          <hr />
+          <section class="nutrition">
+            <h2>Nutrition</h2>
+            <p>
+              The table below shows nutritional values per serving without the
+              additional fillings.
+            </p>
+            <table>
               <tr>
-                <th>Calories</th>
-                <th>Carbs</th>
-                <th>Protein</th>
-                <th>Fat</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
+                <td>Calories</td>
                 <td>277kcal</td>
+              </tr>
+              <tr>
+                <td>Carbs</td>
                 <td>0g</td>
+              </tr>
+              <tr>
+                <td>Protein</td>
                 <td>20g</td>
+              </tr>
+              <tr>
+                <td>Fat</td>
                 <td>22g</td>
               </tr>
-            </tbody>
-          </table>
-        </section>
+            </table>
+          </section>
+        </div>
       </article>
     </main>
   </body>
