--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
       sizes="32x32"
       href="./assets/images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&family=Young+Serif&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css-reset.css" />
     <link rel="stylesheet" href="./styles.css" />
     <title>Frontend Mentor | Recipe page</title>
 
@@ -59,45 +72,42 @@
             </ul>
           </section>
           <hr />
-          <secion class="instructions">
+          <section class="instructions">
             <h2>Instructions</h2>
-
-            <p>
-              1. <span class="bold">Beat the eggs:</span> In a bowl, beat the
-              eggs with a pinch of salt and pepper until they are well mixed.
-              You can add a tablespoon of water or milk for a fluffier texture.
-            </p>
-
-            <p>
-              2. <span class="bold">Heat the pan:</span> Place a non-stick
-              frying pan over medium heat and add butter or oil.
-            </p>
-
-            <p>
-              3. <span class="bold">Cook the omelette:</span> Once the butter is
-              melted and bubbling, pour in the eggs. Tilt the pan to ensure the
-              eggs evenly coat the surface.
-            </p>
-
-            <p>
-              4. <span class="bold">Add fillings (optional):</span> When the
-              eggs begin to set at the edges but are still slightly runny in the
-              middle, sprinkle your chosen fillings over one half of the
-              omelette.
-            </p>
-
-            <p>
-              5. <span class="bold">Fold and serve:</span> As the omelette
-              continues to cook, carefully lift one edge and fold it over the
-              fillings. Let it cook for another minute, then slide it onto a
-              plate.
-            </p>
-
-            <p>
-              6. <span class="bold">Enjoy:</span> Serve hot, with additional
-              salt and pepper if needed.
-            </p>
-          </secion>
+            <ol>
+              <li>
+                <span class="bold">Beat the eggs:</span> In a bowl, beat the
+                eggs with a pinch of salt and pepper until they are well mixed.
+                You can add a tablespoon of water or milk for a fluffier
+                texture.
+              </li>
+              <li>
+                <span class="bold">Heat the pan:</span> Place a non-stick frying
+                pan over medium heat and add butter or oil.
+              </li>
+              <li>
+                <span class="bold">Cook the omelette:</span> Once the butter is
+                melted and bubbling, pour in the eggs. Tilt the pan to ensure
+                the eggs evenly coat the surface.
+              </li>
+              <li>
+                <span class="bold">Add fillings (optional):</span> When the eggs
+                begin to set at the edges but are still slightly runny in the
+                middle, sprinkle your chosen fillings over one half of the
+                omelette.
+              </li>
+              <li>
+                <span class="bold">Fold and serve:</span> As the omelette
+                continues to cook, carefully lift one edge and fold it over the
+                fillings. Let it cook for another minute, then slide it onto a
+                plate.
+              </li>
+              <li>
+                <span class="bold">Enjoy:</span> Serve hot, with additional salt
+                and pepper if needed.
+              </li>
+            </ol>
+          </section>
           <hr />
           <section class="nutrition">
             <h2>Nutrition</h2>
